--- a/index.html
+++ b/index.html
@@ -11,17 +11,22 @@
 </head>
 <body>
   <div class="container">
-    <form>
-      <label for="string">Enter a word or sentence:</label>
+    <div class="jumbotron text-center">
+      <h4 class="display-3">Word Puzzle</h4> 
+      <hr>
+      <p class="lead">Enter a word or sentence.<br>The puzzle generator will remove all the vowels. <br>Have a friend try to guess the original word or sentence.</p>
+    </div>
+    <form class=text-center>
+      <label for="string">Please enter a word or sentence to encode:</label>
+      <br>
       <input id="string" type="text">
-      <button type="submit">Submit</button>
+      <br>
+      <br>
+      <button type="submit" class="btn btn-success">Submit</button>
     </form>
-  
     <div id="returnDiv">
-      <p>Puzzle: <span id="return"></span></p>  
+      <p class="text-center lead">Guess the original sentence from this clue: <br><span id="return"></span></p>  
     </div>
   </div>
-
-  
 </body>
 </html>
